--- a/source/kv/ChangePasswordScreen.kv
+++ b/source/kv/ChangePasswordScreen.kv
@@ -14,7 +14,7 @@
     MDFloatLayout:
         size_hint_x: .2
         size_hint_y: .2
-        pos_hint: {"center_x": .45, "center_y": .72}
+        pos_hint: {"center_x": .45, "center_y": .7}
         canvas:
             Color:
                 rgb: (1, 1, 1, 1)
@@ -22,39 +22,42 @@
                 size: 240, 240
                 pos: self.pos
                 source: "source/pic/avatar_test.png"
+    MDFloatLayout:
+        size_hint_x: 0.8
+        size_hint_y: 0.7
+        pos_hint: {"center_x": .5, "center_y": .5}
+        MDTextField:
+            id: old_password_field
+            text: ''
+            hint_text: 'Old Password'
+            password: True
+            font_name: 'myFont'
+            font_size: 30
+            pos_hint: {"center_x": .5, "center_y": .5}
 
-    MDTextField:
-        id: old_password_field
-        text: ''
-        hint_text: 'Old Password'
-        password: True
-        font_name: 'myFont'
-        font_size: 40
-        pos_hint: {"center_x": .7, "center_y": .5}
+        MDTextField:
+            id: new_password_field
+            text: ''
+            hint_text: 'New Password'
+            password: True
+            helper_text: 'Note: At least 8 characters'
+            helper_text_mode: "on_focus"
+            font_name: 'myFont'
+            font_size: 30
+            pos_hint: {"center_x": .5, "center_y": .4}
 
-    MDTextField:
-        id: new_password_field
-        text: ''
-        hint_text: 'New Password'
-        password: True
-        helper_text: 'Note: At least 8 characters'
-        helper_text_mode: "on_focus"
-        font_name: 'myFont'
-        font_size: 40
-        pos_hint: {"center_x": .7, "center_y": .41}
+        MDTextField:
+            id: re_new_password_field
+            text: ''
+            hint_text: 'Re-enter New Password'
+            password: True
+            font_name: 'myFont'
+            font_size: 30
+            pos_hint: {"center_x": .5, "center_y": .3}
 
-    MDTextField:
-        id: re_new_password_field
-        text: ''
-        hint_text: 'Re-enter New Password'
-        password: True
-        font_name: 'myFont'
-        font_size: 40
-        pos_hint: {"center_x": .7, "center_y": .32}
-
-    MDRaisedButton:
-        text: "Save"
-        md_bg_color: "#42A5F5"
-        pos_hint: {"center_x": .5, "center_y": .22}
-        size_hint: (0.1, 0.06)
-        on_press: root.updatePassword()
+        MDRaisedButton:
+            text: "Save"
+            md_bg_color: "#42A5F5"
+            pos_hint: {"center_x": .5, "center_y": .1}
+            size_hint: (0.1, 0.06)
+            on_press: root.updatePassword()
