--- a/source/kv/FileSelectScreen.kv
+++ b/source/kv/FileSelectScreen.kv
@@ -12,6 +12,7 @@
 #            preview: True
             ### Set item selection callback
             on_item_press: root.show_selected()
+            font_name: 'myFont'
 
         Row:
             halign: 'right'
